--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,14 @@
 {
     "compilerOptions": {
-      "target": "es2017",
-      "module": "commonjs",
-      "outDir": "dist/src/main",
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true,
-      "resolveJsonModule": true,
-      "allowSyntheticDefaultImports": false,
-      "forceConsistentCasingInFileNames": true,
-      "removeComments": true
-    },
-    "exclude": [
-      "../node_modules"
-    ],
-    "include": [
-      "src/main/**/*.ts",
-      "src/main/**/*.json"
-    ]
-  }
-  
+        "module": "commonjs",
+        "esModuleInterop": true,
+        "target": "ES2017",
+        "moduleResolution": "node",
+        "sourceMap": true,
+        "outDir": "dist/src/main",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "strict": true,
+        "strictPropertyInitialization": false
+    }
+}
