--- a/tsconfig-main-only.json
+++ b/tsconfig-main-only.json
@@ -5,10 +5,13 @@
         "target": "ES2017",
         "moduleResolution": "node",
         "sourceMap": true,
-        "outDir": "dist/src/main",
+        "outDir": "dist/examples/main-only/src/main",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "strict": true,
         "strictPropertyInitialization": false
-    }
+    },
+    "include": [
+        "examples/main-only/**/*.ts"
+    ]
 }
