--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build-main-only-example": "tsc --p tsconfig-main-only.json",
         "serve-main-only-example": "ts-node -P tsconfig-main-only.json examples/main-only/src/main/main.ts",
         "build-heroes-rest-example": "tsc --p tsconfig-heroes-rest.json",
-        "serve-heroes-rest-example": "ts-node -P tsconfig-heroes-rest.json examples/heroes-rest/src/main/main.ts",
+        "serve-heroes-rest-example": "ts-node -P tsconfig-heroes-rest.json examples/heroes-rest/src/main/main.ts --the-way.core.scan.enabled=true --the-way.core.scan.path=dist/examples/heroes-rest/src/main",
         "run-heroes-rest-example": "yarn build-heroes-rest-example && node dist/examples/heroes-rest/src/main/main.js --the-way.core.scan.enabled=true --the-way.core.scan.path=dist/examples/heroes-rest/src/main",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -27,7 +27,7 @@
         "typescript": "^4.2.4"
     },
     "dependencies": {
-        "@umberware/the-way": "^1.0.0-Beta.1",
+        "@umberware/the-way": "^1.0.0-Beta.1.5",
         "rxjs": "6.6.7"
     }
 }
