--- a/examples/custom-security-rest/tsconfig.json
+++ b/examples/custom-security-rest/tsconfig.json
@@ -5,13 +5,13 @@
         "target": "ES2017",
         "moduleResolution": "node",
         "sourceMap": true,
-        "outDir": "dist/examples/heroes-rest/src/main",
+        "outDir": "../../dist/examples/custom-security-rest/src/main",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "strict": true,
         "strictPropertyInitialization": false
     },
     "include": [
-        "examples/heroes-rest/**/*.ts"
+        "examples/custom-security-rest/**/*.ts"
     ]
 }
