--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build-main-only-example": "tsc --p tsconfig-main-only.json",
-        "serve-main-only-example": "ts-node -P tsconfig-main-only.json examples/main-only/src/main/main.ts",
-        "build-internationalization-example": "tsc --p tsconfig-internationalization.json",
-        "serve-internationalization-example": "ts-node -P tsconfig-internationalization.json examples/internationalization/src/main/main.ts --the-way.core.scan.enabled=true",
-        "build-heroes-rest-example": "tsc --p tsconfig-heroes-rest.json",
-        "serve-heroes-rest-example": "ts-node -P tsconfig-heroes-rest.json examples/heroes-rest/src/main/main.ts --the-way.core.scan.enabled=true",
+        "build-main-only-example": "tsc --p examples/main-only/tsconfig.json",
+        "serve-main-only-example": "ts-node -P examples/main-only/tsconfig.json examples/main-only/src/main/main.ts",
+        "build-internationalization-example": "tsc --p examples/internationalization/tsconfig.json",
+        "serve-internationalization-example": "ts-node -P examples/internationalization/tsconfig.json examples/internationalization/src/main/main.ts --the-way.core.scan.enabled=true",
+        "build-heroes-rest-example": "tsc --p examples/heroes-rest/tsconfig.json",
+        "serve-heroes-rest-example": "ts-node -P examples/heroes-rest/tsconfig.json examples/heroes-rest/src/main/main.ts --the-way.core.scan.enabled=true",
+        "build-custom-security-rest-example": "tsc --p examples/custom-security-rest/tsconfig.json",
+        "serve-custom-security-rest-example": "ts-node -P examples/custom-security-rest/tsconfig.json examples/custom-security-rest/src/main/main.ts --the-way.core.scan.enabled=true",
         "run-heroes-rest-example": "yarn build-heroes-rest-example && node dist/examples/heroes-rest/src/main/main.js --the-way.core.scan.enabled=true",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -29,7 +31,7 @@
         "typescript": "^4.2.4"
     },
     "dependencies": {
-        "@umberware/the-way": "^1.0.0-Beta.2.5",
+        "@umberware/the-way": "^1.0.0-Beta.2.8",
         "rxjs": "6.6.7"
     }
 }
